--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
 
     <header class="header">
         <div class="container">
-            <div class="header-container">
-                <nav class="header-nav">
+            <div class="header__container">
+                <nav class="header__nav">
                     <a href="./index.html" class="web-logo">
                         Web<span class="studiologo-header">Studio</span>
                     </a>
-                    <ul class="site-nav">
-                        <li><a class="link-nav link-nav--current" href="./index.html">Студія</a></li>
-                        <li><a class="link-nav" href="./portfolio.html">Портфоліо</a></li>
-                        <li><a class="link-nav" href=" ">Контакти</a></li>
+                    <ul class="menu__nav">
+                        <li><a class="link__nav link-nav--current" href="./index.html">Студія</a></li>
+                        <li><a class="link__nav" href="./portfolio.html">Портфоліо</a></li>
+                        <li><a class="link__nav" href=" ">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contact">
-                    <li class="contact-list">
-                        <a class="link-contact" href="mailto:info@devstudio.com">
-                        <svg class="contact-icon" width="16" height="12">
+                    <li class="contact__list">
+                        <a class="contact__link" href="mailto:info@devstudio.com">
+                        <svg class="contact__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                     </li>
-                    <li class="contact-list">
-                        <a class="link-contact" href="tel:+380961111111">
-                        <svg class="contact-icon" width="10" height="16">
+                    <li class="contact__list">
+                        <a class="contact__link" href="tel:+380961111111">
+                        <svg class="contact__icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                         +380961111111</a>
