--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                         Web<span class="studiologo-header">Studio</span>
                     </a>
                     <ul class="menu__nav">
-                        <li><a class="link__nav link-nav--current" href="./index.html">Студія</a></li>
+                        <li><a class="link__nav link__nav--current" href="./index.html">Студія</a></li>
                         <li><a class="link__nav" href="./portfolio.html">Портфоліо</a></li>
                         <li><a class="link__nav" href=" ">Контакти</a></li>
                     </ul>
@@ -52,49 +53,49 @@
     <main>
         <section class="hero section">
             <div class="container">
-                <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="btn-requestservice" data-modal-open>Замовити послугу</button>
             </div>
         </section>
 
         <section class="undertitle section">
             <div class="container">
-                <ul class="listof-benefits">
+                <ul class="benefits__list">
                     <li class="list">
-                        <div class="design-boxes">
-                            <svg class="benefits-icon">
+                        <div class="design__boxes">
+                            <svg class="benefits__icon">
                                 <use href="./images/icons.svg#icon-antenna" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Увага до деталей</h2>
-                        <p class="benefits-description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <p class="benefits__description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="list">
-                        <div class="design-boxes">
-                            <svg class="benefits-icon">
+                        <div class="design__boxes">
+                            <svg class="benefits__icon">
                                 <use href="./images/icons.svg#icon-clock" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Пунктуальність</h2>
-                        <p class="benefits-description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <p class="benefits__description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="list">
-                        <div class="design-boxes">
-                            <svg class="benefits-icon">
+                        <div class="design__boxes">
+                            <svg class="benefits__icon">
                                 <use href="./images/icons.svg#icon-computer" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Планування</h2>
-                        <p class="benefits-description">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <p class="benefits__description">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="list">
-                        <div class="design-boxes">
-                            <svg class="benefits-icon">
+                        <div class="design__boxes">
+                            <svg class="benefits__icon">
                                 <use href="./images/icons.svg#icon-astronaut" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Сучасні технології</h2>
-                        <p class="benefits-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <p class="benefits__description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
