--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -19,28 +18,28 @@
 
     <header class="header">
         <div class="container">
-            <div class="header__container">
-                <nav class="header__nav">
+            <div class="header-container">
+                <nav class="header-nav">
                     <a href="./index.html" class="web-logo">
                         Web<span class="studiologo-header">Studio</span>
                     </a>
-                    <ul class="menu__nav">
-                        <li><a class="link__nav link__nav--current" href="./index.html">Студія</a></li>
-                        <li><a class="link__nav" href="./portfolio.html">Портфоліо</a></li>
-                        <li><a class="link__nav" href=" ">Контакти</a></li>
+                    <ul class="site-nav">
+                        <li><a class="link-nav link-nav--current" href="./index.html">Студія</a></li>
+                        <li><a class="link-nav" href="./portfolio.html">Портфоліо</a></li>
+                        <li><a class="link-nav" href=" ">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contact">
-                    <li class="contact__list">
-                        <a class="contact__link" href="mailto:info@devstudio.com">
-                        <svg class="contact__icon" width="16" height="12">
+                    <li class="contact-list">
+                        <a class="link-contact" href="mailto:info@devstudio.com">
+                        <svg class="contact-icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                     </li>
-                    <li class="contact__list">
-                        <a class="contact__link" href="tel:+380961111111">
-                        <svg class="contact__icon" width="10" height="16">
+                    <li class="contact-list">
+                        <a class="link-contact" href="tel:+380961111111">
+                        <svg class="contact-icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                         +380961111111</a>
@@ -53,49 +52,49 @@
     <main>
         <section class="hero section">
             <div class="container">
-                <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="btn-requestservice" data-modal-open>Замовити послугу</button>
             </div>
         </section>
 
         <section class="undertitle section">
             <div class="container">
-                <ul class="benefits__list">
+                <ul class="listof-benefits">
                     <li class="list">
-                        <div class="design__boxes">
-                            <svg class="benefits__icon">
+                        <div class="design-boxes">
+                            <svg class="benefits-icon">
                                 <use href="./images/icons.svg#icon-antenna" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Увага до деталей</h2>
-                        <p class="benefits__description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <p class="benefits-description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="list">
-                        <div class="design__boxes">
-                            <svg class="benefits__icon">
+                        <div class="design-boxes">
+                            <svg class="benefits-icon">
                                 <use href="./images/icons.svg#icon-clock" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Пунктуальність</h2>
-                        <p class="benefits__description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <p class="benefits-description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="list">
-                        <div class="design__boxes">
-                            <svg class="benefits__icon">
+                        <div class="design-boxes">
+                            <svg class="benefits-icon">
                                 <use href="./images/icons.svg#icon-computer" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Планування</h2>
-                        <p class="benefits__description">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <p class="benefits-description">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="list">
-                        <div class="design__boxes">
-                            <svg class="benefits__icon">
+                        <div class="design-boxes">
+                            <svg class="benefits-icon">
                                 <use href="./images/icons.svg#icon-astronaut" width="70" height="70"></use>
                             </svg>
                         </div>
                         <h2 class="benefits">Сучасні технології</h2>
-                        <p class="benefits__description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <p class="benefits-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
