--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="./index.html" class="web__logo">
                         Web<span class="studiologo__header">Studio</span>
                     </a>
-                    <ul class="navigation__links">
+                    <ul class="navigation-links">
                         <li><a class="link__nav link__nav--current" href="./index.html">Студія</a></li>
                         <li><a class="link__nav" href="./portfolio.html">Портфоліо</a></li>
                         <li><a class="link__nav" href=" ">Контакти</a></li>
@@ -48,7 +48,6 @@
             </div>
         </div>
     </header>
-
 
     <main>
         <section class="hero section">
