--- a/portfolio.html
+++ b/portfolio.html
@@ -18,28 +18,28 @@
 
     <header class="header">
         <div class="container">
-            <div class="header-container">
-                <nav class="header-nav">
+            <div class="header__container">
+                <nav class="header__nav">
                     <a href="./index.html" class="web-logo">
-                        Web<span class="studiologo-header">Studio</span>
+                        Web<span class="studiologo__header">Studio</span>
                     </a>
-                    <ul class="site-nav">
-                        <li><a class="link-nav" href="./index.html">Студія</a></li>
-                        <li><a class="link-nav link-nav--current" href="./portfolio.html">Портфоліо</a></li>
-                        <li><a class="link-nav" href=" ">Контакти</a></li>
+                    <ul class="navigation__links">
+                        <li><a class="link__nav link__nav--current" href="./index.html">Студія</a></li>
+                        <li><a class="link__nav" href="./portfolio.html">Портфоліо</a></li>
+                        <li><a class="link__nav" href=" ">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contact">
-                    <li class="contact-list">
-                        <a class="link-contact" href="mailto:info@devstudio.com">
-                            <svg class="contact-icon" width="16" height="12">
+                    <li class="contact__item">
+                        <a class="link__contact" href="mailto:info@devstudio.com">
+                            <svg class="contact__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg>
                             info@devstudio.com</a>
                     </li>
-                    <li class="contact-list">
-                        <a class="link-contact" href="tel:+380961111111">
-                            <svg class="contact-icon" width="10" height="16">
+                    <li class="contact__item">
+                        <a class="link__contact" href="tel:+380961111111">
+                            <svg class="contact__icon" width="10" height="16">
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
                             +380961111111</a>
@@ -54,90 +54,146 @@
             <div class="container">
                 <ul class="buttons">
                     <li>
-                        <button type="button" class="filter-button">Усі</button>
+                        <button type="button" class="filter__button">Усі</button>
                     </li>
                     <li>
-                        <button type="button" class="filter-button">Веб-сайти</button>
+                        <button type="button" class="filter__button">Веб-сайти</button>
                     </li>
                     <li>
-                        <button type="button" class="filter-button">Додатки</button>
+                        <button type="button" class="filter__button">Додатки</button>
                     </li>
                     <li>
-                        <button type="button" class="filter-button">Дизайн</button>
+                        <button type="button" class="filter__button">Дизайн</button>
                     </li>
                     <li>
-                        <button type="button" class="filter-button">Маркетинг</button>
+                        <button type="button" class="filter__button">Маркетинг</button>
                     </li>
                 </ul>
-                <ul class="project-cards">
+                <ul class="project__cards">
                     <li class="boxes">
-                        <div class="overlay-wrapper">
+                        <div class="overlay__wrapper">
                             <img src="./images/pg2img1.jpeg" alt="Компютер" width="370" height="294">
-                            <div class="upsliding-window">
-                                <p class="text-inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                         </div>
-                        <div class="project-wrapper"> 
-                            <h2 class="project-name">Технокряк</h2>
-                            <p class="project-type">Веб-сайт</p>
+                        <div class="project__wrapper"> 
+                            <h2 class="project__name">Технокряк</h2>
+                            <p class="project__type">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img2.jpeg" alt="Баскетболісти" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                            <p class="project-type">Дизайн</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img2.jpeg" alt="Баскетболісти" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Постер New Orlean vs Golden Star</h2>
+                            <p class="project__type">Дизайн</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img3.jpeg" alt="Логотип риби" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Ресторан Seafood</h2>
-                            <p class="project-type">Додаток</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img3.jpeg" alt="Логотип риби" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Ресторан Seafood</h2>
+                            <p class="project__type">Додаток</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img4.jpeg" alt="Навушники" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Проєкт Prime</h2>
-                            <p class="project-type">Маркетинг</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img4.jpeg" alt="Навушники" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Проєкт Prime</h2>
+                            <p class="project__type">Маркетинг</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img5.jpeg" alt="Коробки" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Проєкт Boxes</h2>
-                            <p class="project-type">Додаток</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img5.jpeg" alt="Коробки" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Проєкт Boxes</h2>
+                            <p class="project__type">Додаток</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img6.jpeg" alt="Монітор" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Inspiration has no Borders</h2>
-                            <p class="project-type">Веб-сайт</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img6.jpeg" alt="Монітор" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Inspiration has no Borders</h2>
+                            <p class="project__type">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img7.jpeg" alt="Відкрита книга" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Видання Limited Edition</h2>
-                            <p class="project-type">Дизайн</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img7.jpeg" alt="Відкрита книга" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Видання Limited Edition</h2>
+                            <p class="project__type">Дизайн</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img8.jpeg" alt="Бірка" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Проєкт Lab</h2>
-                            <p class="project-type">Маркетинг</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img8.jpeg" alt="Бірка" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Проєкт Lab</h2>
+                            <p class="project__type">Маркетинг</p>
                         </div>
                     </li>
                     <li class="boxes">
-                        <img src="./images/pg2img9.jpeg" alt="Компютер на столі" width="370" height="294">
-                        <div class="project-wrapper">
-                            <h2 class="project-name">Growing Business</h2>
-                            <p class="project-type">Додаток</p>
+                        <div class="overlay__wrapper">
+                            <img src="./images/pg2img9.jpeg" alt="Компютер на столі" width="370" height="294">
+                            <div class="upsliding__window">
+                                <p class="text__inwindow"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+                        <div class="project__wrapper">
+                            <h2 class="project__name">Growing Business</h2>
+                            <p class="project__type">Додаток</p>
                         </div>
                     </li>
                 </ul>
@@ -146,55 +202,69 @@
     </main>
 
     <footer class="footer">
-        <div class="container logo-address-social">
-            <div class="logo-address">
+        <div class="container logo__address-social">
+            <div class="logo__address">
                 <a href="./index.html" class="web-logo">
-                    Web<span class="studiologo-footer">Studio</span>
+                    Web<span class="studiologo__footer">Studio</span>
                 </a>
-                <address class="footer-adress">
-                    <p class="adress-line">м. Київ, пр-т Лесі Українки, 26</p>
-                    <ul class="contact-footer">
-                        <li class="contact-footer-list">
-                            <a class="link-contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <address class="footer__adress">
+                    <p class="adress__line">м. Київ, пр-т Лесі Українки, 26</p>
+                    <ul class="contact__footer">
+                        <li class="contact__footer-list">
+                            <a class="link-contact__footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class="contact-footer-list">
-                            <a class="link-contact-footer" href="tel:+380961111111">+380961111111</a>
+                        <li class="contact__footer-list">
+                            <a class="link-contact__footer" href="tel:+380961111111">+380961111111</a>
                         </li>
                     </ul>
                 </address>
             </div>
             <div class="social">
-                <h3 class="join">Приєднуйтесь</h3>
-                <ul class="social-list-footer">
+                <h2 class="join">Приєднуйтесь</h2>
+                <ul class="social-list__footer">
                     <li>
-                        <a href="" class="social-link-footer">
-                            <svg class="social-icon-footer" width="20px" height="20px">
+                        <a href="" class="social-link__footer">
+                            <svg class="social-icon__footer" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="" class="social-link-footer">
-                            <svg class="social-icon-footer" width="20px" height="20px">
+                        <a href="" class="social-link__footer">
+                            <svg class="social-icon__footer" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="" class="social-link-footer">
-                            <svg class="social-icon-footer" width="20px" height="20px">
+                        <a href="" class="social-link__footer">
+                            <svg class="social-icon__footer" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="" class="social-link-footer">
-                            <svg class="social-icon-footer" width="20px" height="20px">
+                        <a href="" class="social-link__footer">
+                            <svg class="social-icon__footer" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="sign__up">
+                <p class="sign__up-title">Підпишіться на розсилку</p>
+                <form class="sign__up-form">
+                    <label class="sign-up-label" for="person-mail-footer">
+                        <input class="email__input" id="person-mail-footer" type="email" placeholder="E-mail"
+                            name="person-mail-footer">
+                    </label>
+                    <button type="submit" class="btn__sign-up" data-modal-open>Підписатися
+                        <svg class="send__icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
